; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_viper.c_viper_cf_rst.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_viper.c_viper_cf_rst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIPER_ICR_CF_RST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @viper_cf_rst(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @VIPER_ICR_CF_RST, align 4
  %7 = call i32 @viper_icr_set_bit(i32 %6)
  br label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @VIPER_ICR_CF_RST, align 4
  %10 = call i32 @viper_icr_clear_bit(i32 %9)
  br label %11

11:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @viper_icr_set_bit(i32) #1

declare dso_local i32 @viper_icr_clear_bit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
